--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^9.4.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3"
   },
   "scripts": {
     "predeploy": "npm run build",
