--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-pdf": "^6.2.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-tsparticles": "^2.9.3",
     "tinycolor2": "^1.6.0",
     "tsparticles": "^2.9.3"
